fix light plus favicon bug

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             rel="icon"
             type="image/png"
             sizes="32x32"
-            href="./images/favicon-monokai.png"
+            href="./images/favicon-dark-plus.png"
             id="favicon"
         />
     </head>
