--- a/html/article-2.html
+++ b/html/article-2.html
@@ -11,6 +11,7 @@
             type="image/png"
             sizes="32x32"
             href="../images/favicon-monokai.png"
+            id="favicon"
         />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -381,15 +382,36 @@
                         </ul>
                         <div class="color-theme">
                             <span class="color-theme-name">
-                                <span>Monokai</span>
+                                <span id="color-scheme-name">Monokai</span>
                                 <span class="arrow">↓</span>
-                                <select class="theme-picker">
-                                    <option value="">Dark+</option>
-                                    <option value="">Light+</option>
-                                    <option value="">Monokai</option>
-                                    <option value="">Github Dark</option>
-                                    <option value="">Github Light</option>
-                                    <option value="">Solarized Light</option>
+                                <select class="theme-picker" id="theme-select">
+                                    <option value="dark-plus" id="dark-plus">
+                                        Dark+
+                                    </option>
+                                    <option value="light-plus" id="light-plus">
+                                        Light+
+                                    </option>
+                                    <option value="monokai" id="monokai">
+                                        Monokai
+                                    </option>
+                                    <option
+                                        value="github-dark"
+                                        id="github-dark"
+                                    >
+                                        Github Dark
+                                    </option>
+                                    <option
+                                        value="github-light"
+                                        id="github-light"
+                                    >
+                                        Github Light
+                                    </option>
+                                    <option
+                                        value="solarized-light"
+                                        id="solarized-light"
+                                    >
+                                        Solarized Light
+                                    </option>
                                 </select>
                             </span>
                         </div>
@@ -397,5 +419,6 @@
                 </div>
             </main>
         </div>
+        <script src="../index.js"></script>
     </body>
 </html>
