--- a/html/article1.html
+++ b/html/article1.html
@@ -13,6 +13,7 @@
             type="image/png"
             sizes="32x32"
             href="../images/favicon-monokai.png"
+            id="favicon"
         />
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;700&display=swap" rel="stylesheet"> 
 </head>
@@ -154,15 +155,15 @@
                         </ul>
                         <div class="color-theme">
                     <span class="color-theme-name">
-                        <span>Monokai</span>
+                        <span id="color-scheme-name">Monokai</span>
                         <span class="arrow">↓</span>
-                        <select class="theme-picker">
-                            <option value="">Dark+</option>
-                            <option value="">Light+</option>
-                            <option value="">Monokai</option>
-                            <option value="">Github Dark</option>
-                            <option value="">Github Light</option>
-                            <option value="">Solarized Light</option>
+                        <select class="theme-picker" id="theme-select">
+                            <option value="dark-plus" id="dark-plus">Dark+</option>
+                            <option value="light-plus" id="light-plus">Light+</option>
+                            <option value="monokai" id="monokai">Monokai</option>
+                            <option value="github-dark" id="github-dark">Github Dark</option>
+                            <option value="github-light" id="github-light">Github Light</option>
+                            <option value="solarized-light" id="solarized-light">Solarized Light</option>
                         </select>
                         </span>
                     </div>
@@ -172,7 +173,7 @@
 
         </div>
     </div>
-
+    <script src="../index.js"></script>
 </body>
 
 </html>
