--- a/html/article_3.html
+++ b/html/article_3.html
@@ -17,6 +17,7 @@
             type="image/png"
             sizes="32x32"
             href="../images/favicon-monokai.png"
+            id="favicon"
         />
     </head>
     <body>
@@ -425,15 +426,38 @@
                         </ul>
                         <div class="color-theme">
                             <span class="color-theme-name">
-                                <span class="theme-name">Monokai</span>
+                                <span class="theme-name" id="color-scheme-name"
+                                    >Monokai</span
+                                >
                                 <span class="arrow">↓</span>
-                                <select class="theme-picker">
-                                    <option value="">Dark+</option>
-                                    <option value="">Light+</option>
-                                    <option value="">Monokai</option>
-                                    <option value="">Github Dark</option>
-                                    <option value="">Github Light</option>
-                                    <option value="">Solarized Light</option>
+                                <select class="theme-picker" id="theme-select">
+                                    <option value="dark-plus" id="dark-plus">
+                                        Dark+
+                                    </option>
+                                    <option value="light-plus" id="light-plus">
+                                        Light+
+                                    </option>
+                                    <option value="monokai" id="monokai">
+                                        Monokai
+                                    </option>
+                                    <option
+                                        value="github-dark"
+                                        id="github-dark"
+                                    >
+                                        Github Dark
+                                    </option>
+                                    <option
+                                        value="github-light"
+                                        id="github-light"
+                                    >
+                                        Github Light
+                                    </option>
+                                    <option
+                                        value="solarized-light"
+                                        id="solarized-light"
+                                    >
+                                        Solarized Light
+                                    </option>
                                 </select>
                             </span>
                         </div>
@@ -441,5 +465,6 @@
                 </div>
             </main>
         </div>
+        <script src="../index.js"></script>
     </body>
 </html>
