make navbar responsive and fix typos

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                                         >
                                     </h3>
                                     <p class="article-description">
-                                        Calculating digits in a series of
-                                        numbers.
+                                        Calculating digits in a series
+                                        of&nbsp;numbers.
                                     </p>
                                     <p class="date-published">
                                         <span class="sr-only"
@@ -146,13 +146,13 @@
                                 <div class="article-text">
                                     <h3 class="article-title">
                                         <a href="./html/article_3.html"
-                                            >Browser Cache and Edge Cache
-                                            Explained</a
+                                            >Browser Cache and Edge
+                                            Cache&nbsp;Explained</a
                                         >
                                     </h3>
                                     <p class="article-description">
-                                        You updated it? Well, yes, but not
-                                        really.
+                                        You updated it? Well, yes, but
+                                        not&nbsp;really.
                                     </p>
                                     <p class="date-published">
                                         <span class="sr-only"
@@ -236,7 +236,7 @@
                                     </div>
                                 </div>
                                 <div class="article-text">
-                                    <h3 class="article-title">
+                                    <h3 class="article-title project-title">
                                         <a href="./html/rundown.html"
                                             >Rundown</a
                                         >
