complete responsiveness for home page and the second article

--- a/html/article-2.html
+++ b/html/article-2.html
@@ -266,18 +266,13 @@
                             </p>
                             <blockquote>
                                 <div>
-                                    <p class="marker">&gt;</p>
                                     <p>
                                         If you're not uncomfortable by the time
-                                        you're launching,
+                                        you're launching,&nbsp;it's way too late
                                     </p>
                                 </div>
-                                <div>
-                                    <p class="marker">&gt;</p>
-                                    <p>it's way too late.</p>
-                                </div>
                             </blockquote>
-                            <p>
+                            <p class="text-after-blockquote">
                                 I never really launched my side project. It
                                 wasn't "ready". At the same time, it became a
                                 bigger and bigger dependency in our main
