add responsiveness for the project page

--- a/html/ghostmask.html
+++ b/html/ghostmask.html
@@ -143,6 +143,38 @@
                     </div>
                 </footer>
             </div>
+              <!--mobile-view-->
+              <div class="mobile-view">
+                <div class="mobile">
+                    <div class="mobile-flex">
+                      <div class="ghostmask">
+                        <a href="./ghostmask.html"
+                          ><img
+                            src="../images/ghostmask-logo.svg"
+                            alt="ghostmask"
+                            width="100px"
+                            class=" mobile-image"
+                          />
+                        </a>
+                      </div>
+                          <div class="mobile-text" >
+                            <h3>Ghostmask</h3>
+                            <p>
+                              <a
+                                href="https://chrome.google.com/webstore/detail/ghostmask/hocnmmdgenefilfpnkbfopcihmekhamf"
+                                target="_blank" class="mobile-link"
+                                >Chrome.google.com</a
+                              >
+                            </p>
+                          </div>
+                    </div>
+                    <p class="mobile-paragraph">
+                      Browser extension for displaying and <br> manipulating 
+                      design files directly in  <br> the browser.
+                    </p>
+                  </div>
+                  
+            </div>
         </main>
         <script src="../index.js"></script>
     </body>
