--- a/html/blog.html
+++ b/html/blog.html
@@ -104,20 +104,20 @@
                 <footer>
                     <ul>
                         <li><a href="https://github.com/hdodov"  target="_blank">Github</a>
-                            <span>•</span>
+                            <span class="dot">•</span>
                         </li>
                         <li><a href="https://twitter.com/yandodov" target="_blank">Twitter</a>
-                            <span>•</span>
+                            <span class="dot">•</span>
                         </li>
                         <li><a href="https://www.linkedin.com/in/yandodov/" target="_blank">LinkedIn</a>
-                            <span>•</span>
+                            <span class="dot">•</span>
                         </li>
                         <li><a href="https://www.instagram.com/yandodov/" target="_blank">Instagram</a>
                         </li>
                     </ul>
                     <div class="color-theme">
                     <span class="color-theme-name">
-                        <span>Monokai</span>
+                        <span class="diff-theme">Monokai</span>
                         <span class="arrow">↓</span>
                         <select class="theme-picker">
                             <option value="">Dark+</option>
