--- a/html/article-5.html
+++ b/html/article-5.html
@@ -64,156 +64,177 @@
             </header>
             <main>
                 <div class="editor">
-                    <header class="main-header">
-                        <div class="title">
-                            <h1>My Favorite Number</h1>
-                            <p>Reason to start a blog...</p>
+                    <div class="editor-content">
+                        <header class="main-header">
+                            <div class="title">
+                                <h1>My Favorite Number</h1>
+                                <p>Reason to start a blog...</p>
+                            </div>
+                            <div class="publish-date">
+                                <p>24 Dec 2021</p>
+                                <p>57 lines</p>
+                            </div>
+                        </header>
+                        <img
+                            src="../images/binary-24-1280x.png"
+                            alt="Binary digits with the pattern '24' highlighted in the middle"
+                        />
+                        <div class="article-content">
+                            <p>
+                                My favorite number is 24, and today, on the 24th
+                                of December, I turn 24. Even though it's the
+                                dawn of Web 3.0, I decided to celebrate by
+                                giving myself the miracle of Web 1.0 — a blog.
+                            </p>
+                            <p>
+                                Now that we have my favorite number cleared up,
+                                I can tell you a little bit more about myself.
+                                My name's Hristiyan and I'm a software engineer
+                                at
+                                <a
+                                    href="https://oblik.studio/"
+                                    target="_blank"
+                                    class="article-link"
+                                    >Oblik Studio</a
+                                >
+                                . I've studied computer science at
+                                <a
+                                    href="https://www.elsys-bg.org/"
+                                    target="_blank"
+                                    class="article-link"
+                                    >ELSYS</a
+                                >
+                                and have been messing with web development since
+                                11, thanks to my dear childhood friends
+                                <a
+                                    href="https://www.instagram.com/yordanoff/"
+                                    target="_blank"
+                                    class="article-link"
+                                    >Joro</a
+                                >
+                                and
+                                <a
+                                    href="https://www.instagram.com/nequamx/"
+                                    target="_blank"
+                                    class="article-link"
+                                    >Vlady</a
+                                >.
+                            </p>
+                            <p>
+                                I'm passionate about my work and enjoy spending
+                                time in a code editor, to the point that I've
+                                made my website look like one. And yes, the text
+                                you're currently reading has a line height of
+                                exactly 24 pixels. Although I have plenty of
+                                screen time, I know that's not optimal
+                                long-term, which is why I'm also interested in
+                                mental and physical health, nutrition, and
+                                improving my routine. I believe that teamwork
+                                between people is just as important as teamwork
+                                between your very own mind and body.
+                            </p>
+                            <p>
+                                In general, I like unraveling problems and
+                                getting to the bottom of things, sometimes to an
+                                annoying degree. I'm interested in anything from
+                                math, grammar, and Rubik's cubes to truly
+                                complex matters, such as vertical centering in
+                                CSS. I've also been bboying for over 10 years
+                                and salsa dancing lately as well. If I could
+                                have one superpower, it would be to clone
+                                myself, so I could do more stuff.
+                            </p>
+                            <p>
+                                I've gotten to where I am largely because of
+                                people on the internet who've shared their
+                                knowledge and experience. On this website, I
+                                want to share my own ideas, software development
+                                insights, random thoughts, and general life
+                                lessons I learn along the way. I believe that
+                                sharing this, as opposed to sharing drunk
+                                pictures with your friends, can actually make a
+                                worthwhile difference. So, Merry Christmas Eve,
+                                and if you're interested in what I have to say,
+                                you can increase my followers count on any of
+                                these data harvesting platforms:
+                            </p>
                         </div>
-                        <div class="publish-date">
-                            <p>24 Dec 2021</p>
-                            <p>57 lines</p>
-                        </div>
-                    </header>
-                    <img
-                        src="../images/binary-24-1280x.png"
-                        alt="Binary digits with the pattern '24' highlighted in the middle"
-                    />
-                    <div class="article-content">
-                        <p>
-                            My favorite number is 24, and today, on the 24th of
-                            December, I turn 24. Even though it's the dawn of
-                            Web 3.0, I decided to celebrate by giving myself the
-                            miracle of Web 1.0 — a blog.
-                        </p>
-                        <p>
-                            Now that we have my favorite number cleared up, I
-                            can tell you a little bit more about myself. My
-                            name's Hristiyan and I'm a software engineer at
-                            <a
-                                href="https://oblik.studio/"
-                                target="_blank"
-                                class="article-link"
-                                >Oblik Studio</a
-                            >
-                            . I've studied computer science at
-                            <a
-                                href="https://www.elsys-bg.org/"
-                                target="_blank"
-                                class="article-link"
-                                >ELSYS</a
-                            >
-                            and have been messing with web development since 11,
-                            thanks to my dear childhood friends
-                            <a
-                                href="https://www.instagram.com/yordanoff/"
-                                target="_blank"
-                                class="article-link"
-                                >Joro</a
-                            >
-                            and
-                            <a
-                                href="https://www.instagram.com/nequamx/"
-                                target="_blank"
-                                class="article-link"
-                                >Vlady</a
-                            >.
-                        </p>
-                        <p>
-                            I'm passionate about my work and enjoy spending time
-                            in a code editor, to the point that I've made my
-                            website look like one. And yes, the text you're
-                            currently reading has a line height of exactly 24
-                            pixels. Although I have plenty of screen time, I
-                            know that's not optimal long-term, which is why I'm
-                            also interested in mental and physical health,
-                            nutrition, and improving my routine. I believe that
-                            teamwork between people is just as important as
-                            teamwork between your very own mind and body.
-                        </p>
-                        <p>
-                            In general, I like unraveling problems and getting
-                            to the bottom of things, sometimes to an annoying
-                            degree. I'm interested in anything from math,
-                            grammar, and Rubik's cubes to truly complex matters,
-                            such as vertical centering in CSS. I've also been
-                            bboying for over 10 years and salsa dancing lately
-                            as well. If I could have one superpower, it would be
-                            to clone myself, so I could do more stuff.
-                        </p>
-                        <p>
-                            I've gotten to where I am largely because of people
-                            on the internet who've shared their knowledge and
-                            experience. On this website, I want to share my own
-                            ideas, software development insights, random
-                            thoughts, and general life lessons I learn along the
-                            way. I believe that sharing this, as opposed to
-                            sharing drunk pictures with your friends, can
-                            actually make a worthwhile difference. So, Merry
-                            Christmas Eve, and if you're interested in what I
-                            have to say, you can increase my followers count on
-                            any of these data harvesting platforms:
-                        </p>
+                        <footer>
+                            <ul class="social-links">
+                                <li class="social-link">
+                                    <a href="https://github.com/hdodov"
+                                        >Github</a
+                                    >
+                                    <span class="bullet">&bull;</span>
+                                </li>
+                                <li class="social-link">
+                                    <a href="https://twitter.com/yandodov"
+                                        >Twitter</a
+                                    >
+                                    <span class="bullet">&bull;</span>
+                                </li>
+                                <li class="social-link">
+                                    <a
+                                        href="https://www.linkedin.com/in/yandodov/"
+                                    >
+                                        LinkedIn</a
+                                    >
+                                    <span class="bullet">&bull;</span>
+                                </li>
+                                <li class="social-link">
+                                    <a
+                                        href="https://www.instagram.com/yandodov/"
+                                    >
+                                        Instagram</a
+                                    >
+                                </li>
+                            </ul>
+                            <div class="color-theme">
+                                <span class="color-theme-name">
+                                    <span id="color-scheme-name">Monokai</span>
+                                    <span class="arrow">↓</span>
+                                    <select
+                                        class="theme-picker"
+                                        id="theme-select"
+                                    >
+                                        <option
+                                            value="dark-plus"
+                                            id="dark-plus"
+                                        >
+                                            Dark+
+                                        </option>
+                                        <option
+                                            value="light-plus"
+                                            id="light-plus"
+                                        >
+                                            Light+
+                                        </option>
+                                        <option value="monokai" id="monokai">
+                                            Monokai
+                                        </option>
+                                        <option
+                                            value="github-dark"
+                                            id="github-dark"
+                                        >
+                                            Github Dark
+                                        </option>
+                                        <option
+                                            value="github-light"
+                                            id="github-light"
+                                        >
+                                            Github Light
+                                        </option>
+                                        <option
+                                            value="solarized-light"
+                                            id="solarized-light"
+                                        >
+                                            Solarized Light
+                                        </option>
+                                    </select>
+                                </span>
+                            </div>
+                        </footer>
                     </div>
-                    <footer>
-                        <ul class="social-links">
-                            <li class="social-link">
-                                <a href="https://github.com/hdodov">Github</a>
-                                <span class="bullet">&bull;</span>
-                            </li>
-                            <li class="social-link">
-                                <a href="https://twitter.com/yandodov"
-                                    >Twitter</a
-                                >
-                                <span class="bullet">&bull;</span>
-                            </li>
-                            <li class="social-link">
-                                <a href="https://www.linkedin.com/in/yandodov/">
-                                    LinkedIn</a
-                                >
-                                <span class="bullet">&bull;</span>
-                            </li>
-                            <li class="social-link">
-                                <a href="https://www.instagram.com/yandodov/">
-                                    Instagram</a
-                                >
-                            </li>
-                        </ul>
-                        <div class="color-theme">
-                            <span class="color-theme-name">
-                                <span id="color-scheme-name">Monokai</span>
-                                <span class="arrow">↓</span>
-                                <select class="theme-picker" id="theme-select">
-                                    <option value="dark-plus" id="dark-plus">
-                                        Dark+
-                                    </option>
-                                    <option value="light-plus" id="light-plus">
-                                        Light+
-                                    </option>
-                                    <option value="monokai" id="monokai">
-                                        Monokai
-                                    </option>
-                                    <option
-                                        value="github-dark"
-                                        id="github-dark"
-                                    >
-                                        Github Dark
-                                    </option>
-                                    <option
-                                        value="github-light"
-                                        id="github-light"
-                                    >
-                                        Github Light
-                                    </option>
-                                    <option
-                                        value="solarized-light"
-                                        id="solarized-light"
-                                    >
-                                        Solarized Light
-                                    </option>
-                                </select>
-                            </span>
-                        </div>
-                    </footer>
                 </div>
             </main>
         </div>
