--- a/html/nexo.html
+++ b/html/nexo.html
@@ -23,169 +23,186 @@
     </head>
     <body>
         <main>
-            <header>
-                <nav>
-                    <ul class="nav-list">
-                        <li class="nav-item">
-                            <a href="../index.html" class="nav-link">
-                                <div>home</div>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="./blog.html" class="nav-link">
-                                <div>blog</div>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="./project.html" class="nav-link">
-                                <div>projects</div>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <div class="article-tab">
-                                <span class="article-name">nexo</span>
-                                <a href="./project.html"
-                                    ><svg
-                                        width="16"
-                                        height="16"
-                                        viewBox="0 0 16 16"
-                                        fill="currentColor"
-                                    >
-                                        <path
-                                            d="M8 8.707l3.646 3.647.708-.707L8.707 8l3.647-3.646-.707-.708L8 7.293 4.354 3.646l-.707.708L7.293 8l-3.646 3.646.707.708L8 8.707z"
-                                        ></path>
-                                    </svg>
+            <div class="container">
+                <header>
+                    <nav>
+                        <ul class="nav-list">
+                            <li class="nav-item">
+                                <a href="../index.html" class="nav-link">
+                                    <div>home</div>
                                 </a>
-                            </div>
-                        </li>
-                    </ul>
-                </nav>
-            </header>
-            <div class="editor">
-                <div class="editor-content">
-                    <div class="desktop-view">
-                        <div class="flex">
-                            <div class="nexo">
-                                <img
-                                    src="../images/nexo-logo.svg"
-                                    alt="nexo-logo"
-                                    width="100px"
-                                    class="image"
-                                />
-                            </div>
-                            <div class="nexo-text">
-                                <h1>Nexo</h1>
-                                <p>
-                                    Developing and maintaining the product
-                                    marketing
-                                    <br />
-                                    website of the world's first crypto-backed
-                                    loans.
-                                </p>
-                                <p>
-                                    <a
-                                        href="https://nexo.io/"
-                                        target="_blank"
-                                        class="project-link"
-                                        >nexo.io</a
-                                    >
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <!--mobile-view-->
-                    <div class="mobile-view">
-                        <div class="mobile-flex">
-                            <div class="nexo">
-                                <a href="./nexo.html"
-                                    ><img
+                            </li>
+                            <li class="nav-item">
+                                <a href="./blog.html" class="nav-link">
+                                    <div>blog</div>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="./project.html" class="nav-link">
+                                    <div>projects</div>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <div class="article-tab">
+                                    <span class="article-name">nexo</span>
+                                    <a href="./project.html"
+                                        ><svg
+                                            width="16"
+                                            height="16"
+                                            viewBox="0 0 16 16"
+                                            fill="currentColor"
+                                        >
+                                            <path
+                                                d="M8 8.707l3.646 3.647.708-.707L8.707 8l3.647-3.646-.707-.708L8 7.293 4.354 3.646l-.707.708L7.293 8l-3.646 3.646.707.708L8 8.707z"
+                                            ></path>
+                                        </svg>
+                                    </a>
+                                </div>
+                            </li>
+                        </ul>
+                    </nav>
+                </header>
+                <div class="editor">
+                    <div class="editor-content">
+                        <div class="desktop-view">
+                            <div class="flex">
+                                <div class="nexo">
+                                    <img
                                         src="../images/nexo-logo.svg"
                                         alt="nexo-logo"
                                         width="100px"
-                                        class="mobile-image"
-                                /></a>
+                                        class="image"
+                                    />
+                                </div>
+                                <div class="nexo-text">
+                                    <h1>Nexo</h1>
+                                    <p>
+                                        Developing and maintaining the product
+                                        marketing
+                                        <br />
+                                        website of the world's first
+                                        crypto-backed loans.
+                                    </p>
+                                    <p>
+                                        <a
+                                            href="https://nexo.io/"
+                                            target="_blank"
+                                            class="project-link"
+                                            >nexo.io</a
+                                        >
+                                    </p>
+                                </div>
                             </div>
+                        </div>
+                        <!--mobile-view-->
+                        <div class="mobile-view">
+                            <div class="mobile-flex">
+                                <div class="nexo">
+                                    <a href="./nexo.html"
+                                        ><img
+                                            src="../images/nexo-logo.svg"
+                                            alt="nexo-logo"
+                                            width="100px"
+                                            class="mobile-image"
+                                    /></a>
+                                </div>
 
-                            <div class="mobile-text">
-                                <h3>Nexo</h3>
+                                <div class="mobile-text">
+                                    <h3>Nexo</h3>
 
-                                <p>
+                                    <p>
+                                        <a
+                                            href="https://nexo.io/"
+                                            target="_blank"
+                                            class="mobile-link"
+                                            >nexo.io</a
+                                        >
+                                    </p>
+                                </div>
+                            </div>
+                            <p class="mobile-paragraph">
+                                Developing and maintaining the product <br />
+                                marketing website of the world's first <br />
+                                crypto-backed loans.
+                            </p>
+                        </div>
+                        <hr class="line-break" />
+                        <footer>
+                            <ul class="social-links">
+                                <li class="social-link">
+                                    <a href="https://github.com/hdodov"
+                                        >Github</a
+                                    >
+                                    <span class="bullet">&bull;</span>
+                                </li>
+                                <li class="social-link">
+                                    <a href="https://twitter.com/yandodov"
+                                        >Twitter</a
+                                    >
+                                    <span class="bullet">&bull;</span>
+                                </li>
+                                <li class="social-link">
                                     <a
-                                        href="https://nexo.io/"
-                                        target="_blank"
-                                        class="mobile-link"
-                                        >nexo.io</a
+                                        href="https://www.linkedin.com/in/yandodov/"
                                     >
-                                </p>
+                                        LinkedIn</a
+                                    >
+                                    <span class="bullet">&bull;</span>
+                                </li>
+                                <li class="social-link">
+                                    <a
+                                        href="https://www.instagram.com/yandodov/"
+                                    >
+                                        Instagram</a
+                                    >
+                                </li>
+                            </ul>
+                            <div class="color-theme">
+                                <span class="color-theme-name">
+                                    <span id="color-scheme-name">Monokai</span>
+                                    <span class="arrow">↓</span>
+                                    <select
+                                        class="theme-picker"
+                                        id="theme-select"
+                                    >
+                                        <option
+                                            value="dark-plus"
+                                            id="dark-plus"
+                                        >
+                                            Dark+
+                                        </option>
+                                        <option
+                                            value="light-plus"
+                                            id="light-plus"
+                                        >
+                                            Light+
+                                        </option>
+                                        <option value="monokai" id="monokai">
+                                            Monokai
+                                        </option>
+                                        <option
+                                            value="github-dark"
+                                            id="github-dark"
+                                        >
+                                            Github Dark
+                                        </option>
+                                        <option
+                                            value="github-light"
+                                            id="github-light"
+                                        >
+                                            Github Light
+                                        </option>
+                                        <option
+                                            value="solarized-light"
+                                            id="solarized-light"
+                                        >
+                                            Solarized Light
+                                        </option>
+                                    </select>
+                                </span>
                             </div>
-                        </div>
-                        <p class="mobile-paragraph">
-                            Developing and maintaining the product <br />
-                            marketing website of the world's first <br />
-                            crypto-backed loans.
-                        </p>
+                        </footer>
                     </div>
-                    <hr class="line-break" />
-                    <footer>
-                        <ul class="social-links">
-                            <li class="social-link">
-                                <a href="https://github.com/hdodov">Github</a>
-                                <span class="bullet">&bull;</span>
-                            </li>
-                            <li class="social-link">
-                                <a href="https://twitter.com/yandodov"
-                                    >Twitter</a
-                                >
-                                <span class="bullet">&bull;</span>
-                            </li>
-                            <li class="social-link">
-                                <a href="https://www.linkedin.com/in/yandodov/">
-                                    LinkedIn</a
-                                >
-                                <span class="bullet">&bull;</span>
-                            </li>
-                            <li class="social-link">
-                                <a href="https://www.instagram.com/yandodov/">
-                                    Instagram</a
-                                >
-                            </li>
-                        </ul>
-                        <div class="color-theme">
-                            <span class="color-theme-name">
-                                <span id="color-scheme-name">Monokai</span>
-                                <span class="arrow">↓</span>
-                                <select class="theme-picker" id="theme-select">
-                                    <option value="dark-plus" id="dark-plus">
-                                        Dark+
-                                    </option>
-                                    <option value="light-plus" id="light-plus">
-                                        Light+
-                                    </option>
-                                    <option value="monokai" id="monokai">
-                                        Monokai
-                                    </option>
-                                    <option
-                                        value="github-dark"
-                                        id="github-dark"
-                                    >
-                                        Github Dark
-                                    </option>
-                                    <option
-                                        value="github-light"
-                                        id="github-light"
-                                    >
-                                        Github Light
-                                    </option>
-                                    <option
-                                        value="solarized-light"
-                                        id="solarized-light"
-                                    >
-                                        Solarized Light
-                                    </option>
-                                </select>
-                            </span>
-                        </div>
-                    </footer>
                 </div>
             </div>
         </main>
